WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194359
Fix potential build error in GPUDevice
https://bugs.webkit.org/show_bug.cgi?id=194359
Summary
Fix potential build error in GPUDevice
Dean Jackson
Reported
2019-02-06 13:40:23 PST
Fix potential build error in GPUDevice
Attachments
Patch
(1.41 KB, patch)
2019-02-06 13:42 PST
,
Dean Jackson
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-02-06 13:42:07 PST
Created
attachment 361323
[details]
Patch
Joseph Pecoraro
Comment 2
2019-02-06 13:43:28 PST
Comment on
attachment 361323
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361323&action=review
r=me
> Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:57 > if (!devicePtr)
Can this just go outside of the #if/#else?
Dean Jackson
Comment 3
2019-02-06 13:48:34 PST
Committed
r241047
: <
https://trac.webkit.org/changeset/241047
>
Radar WebKit Bug Importer
Comment 4
2019-02-06 13:49:29 PST
<
rdar://problem/47862662
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug