Fix potential build error in GPUDevice https://bugs.webkit.org/show_bug.cgi?id=194359

Reviewed by Joseph Pecoraro.

Add an UNUSED_PARAM for non-macOS platforms.

* platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:
(WebCore::GPUDevice::create):

Canonical link: https://commits.webkit.org/208795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241047 268f45cc-cd09-0410-ab3c-d52691b4dbfc